# llm-in-tee

./: .gitignore  .gitmodules  Cargo.toml  README.md
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  ordinary_clock.rs
crates/alloy-wrapper/: Cargo.toml
crates/alloy-wrapper/src/: lib.rs  signature.rs  util.rs
crates/alloy-wrapper/src/contracts/: mod.rs  vrf_range.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  nitro_secure.rs  ordinary_clock.rs
crates/common/src/crypto/: core.rs  mod.rs  recovery.rs
crates/contracts/abi/: operator_range_manager.json
crates/contracts/artifacts/: operator_range_manager.json
crates/tools/: Cargo.toml
crates/tools/src/: helper.rs  lib.rs  tokio_static.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  raw_wrapper.rs
crates/vrf/: Cargo.toml
crates/vrf/src/: ecvrf.rs  lib.rs  sample.rs  test_utils.rs  traits.rs
crates/vrf/src/unit_tests/: mod.rs  vrf_test.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: lib.rs  test.rs
docs/template/: config-operator.yaml
operator/: README.md
operator/db_sql/: Cargo.toml
operator/db_sql/src/: error.rs  lib.rs
operator/db_sql/src/pg/: mod.rs  pg_client.rs
operator/db_sql/src/pg/entities/: clock_infos.rs  mod.rs  prelude.rs
operator/db_sql/src/pg/migrator/: m20240705_000001_create_clock_infos_table.rs  mod.rs
operator/node_api/: Cargo.toml
operator/node_api/src/: config.rs  error.rs  lib.rs
operator/runer/: Cargo.toml
operator/runer/src/: handler.rs  lib.rs  main.rs  node_factory.rs  operator.rs  storage.rs
operator/runer/src/api/: mod.rs  read.rs  request.rs  response.rs  write.rs
operator/runer/src/cli/: command.rs  mod.rs  operator.rs
runers/: Cargo.toml
scripts/: init_env.sh
tee_llm/: Cargo.toml  README.md
tee_llm/image/: Dockerfile  run.sh
tee_llm/image/models/: README.md
tee_llm/src/: lib.rs  main.rs  nitro_llm.rs
tee_vlc/: Cargo.toml  README.md
tee_vlc/image/: Dockerfile  run.sh
tee_vlc/src/: lib.rs  main.rs  nitro_clock.rs
tools/src/: helper.rs  lib.rs  tokio_zchronod.rs
