[workspace]
members = [
    ".",
    "tee_vlc",
    "tee_llm",
    "runers", "common",
]

exclude = []

resolver = "2"

[workspace.lints.clippy]
nursery = "allow"
cargo = "allow"
pedantic = "allow"
restriction = "allow"
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true
incremental = true

[profile.artifact]
inherits = "release"

[workspace.dependencies]
