[workspace]
members = [
    ".",
    "common",
    "tee_vlc",
    "tee_llm",
    "runers",
    # "llama_cpp-rs/crates/llama_cpp",
]

exclude = []

resolver = "2"

[workspace.lints.clippy]
nursery = "allow"
cargo = "allow"
pedantic = "allow"
restriction = "allow"
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true
incremental = true

[profile.artifact]
inherits = "release"

[workspace.dependencies]
futures = "0.3.30"
tokio = "1.36.0"