[workspace]
members = [
    ".",
    "crates/types",
    "crates/common",
    "crates/websocket",
    "crates/tools",
    "crates/alloy-wrapper",
    "tee_vlc",
    "tee_llm", 
    "operator/node_api",
    "operator/db_sql",
    "operator/runer", 
]

exclude = []

resolver = "2"

[workspace.lints.clippy]
nursery = "allow"
cargo = "allow"
pedantic = "allow"
restriction = "allow"
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true
incremental = true

[profile.artifact]
inherits = "release"

[workspace.dependencies]
futures = "0.3.30"
tokio = "1.36.0"