[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
derive-where = "1.2.7"
serde = { version = "1.0.195", features = ["derive"] }
schnorrkel = { version = "0.11.4", features = ["serde"] }
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
blake2 = "0.10.6"
rand = "0.8.5"
rand_distr = "0.4.3"
primitive-types = { version = "0.12.2", features = ["serde"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }

[lints]
workspace = true
