[package]
name = "tee_llm"
version = "0.1.0"
edition = "2021"

[features]
nitro-enclaves = ["aws-nitro-enclaves-nsm-api", "aws-nitro-enclaves-attestation"]

[dependencies]
hex = "0.4.3"
bincode = "1.3.3"
tracing = "0.1.40"
derive_more = "0.99.17"
derive-where = "1.2.7"
num-bigint = "0.4.6"
rand = { version = "0.8.5" }
tracing-subscriber = "0.3.18"
common ={ path = "../crates/common", version = "0.1.0"}
serde = { version = "1.0.195", features = ["derive"] }
nix = { version = "0.28.0", features = ["socket", "sched", "resource"] }
tokio = { version = "1.35.1", features = ["net", "time", "sync", "rt", "signal", "macros", "rt-multi-thread", "fs", "process", "io-util"] }
tokio-util = "0.7.10"
anyhow = { version = "1.0.79", features = ["backtrace"] }
llama_cpp ={ path = "../llama_cpp-rs/crates/llama_cpp", version = "0.3.2"}
tools ={ path = "../crates/tools"}
vrf = { path = "../crates/vrf"}
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true }
aws-nitro-enclaves-attestation = { git = "https://github.com/neatsys/aws-nitro-enclaves-attestation", version = "0.1.0", optional = true }

[lints]
workspace = true
