[package]
name = "tee_vlc"
version = "0.1.0"
edition = "2021"

[features]
ordinary = [
    "nitro-enclaves",
    "reqwest",
]
nitro-enclaves = ["aws-nitro-enclaves-nsm-api", "aws-nitro-enclaves-attestation"]


[dependencies]
bincode = "1.3.3"
blake2 = "0.10.6"
bytes = "1.5.0"
derive_more = "0.99.17"
derive-where = "1.2.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
common ={ path = "../crates/common", version = "0.1.0"}
serde = { version = "1.0.195", features = ["derive"] }
nix = { version = "0.28.0", features = ["socket", "sched", "resource"] }
tikv-jemallocator = { version = "0.5.4", optional = true }
tokio = { version = "1.35.1", features = ["net", "time", "sync", "rt", "signal", "macros", "rt-multi-thread", "fs", "process", "io-util"] }
tokio-util = "0.7.10"
anyhow = { version = "1.0.79", features = ["backtrace"] }
reqwest = { version = "0.12.4", features = ["json", "multipart"], optional = true }
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true }
aws-nitro-enclaves-attestation = { git = "https://github.com/neatsys/aws-nitro-enclaves-attestation", version = "0.1.0", optional = true }

[lints]
workspace = true
