[package]
name = "alloy-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
common={ path="../common" }
ruint="1.12.3"
rand = "0.8.5"
bytes = "1.5"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde", "recovery", "global-context"] }
revm-primitives = { version = "6.0.0", features = [
    "std",
], default-features = false }
const-hex = "1.12.0"
eyre = "0.6.12"
anyhow = "1.0.86"
alloy-rlp = "0.3.4"
alloy = { version = "0.2.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
[lints]
workspace = true
