[package]
name = "alloy-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
common={ path="../common" }
ruint="1.12.3"
rand = "0.8.5"
reqwest = "0.12.5"
bytes = "1.5"
tracing = "0.1.40"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde", "recovery", "global-context"] }
revm-primitives = { version = "7.1.0", features = [
    "std",
], default-features = false }
const-hex = "1.12.0"
eyre = "0.6.12"
anyhow = "1.0.86"
alloy-rlp = "0.3.7"
tokio = { version = "1.35.1", features = ["net", "time", "sync", "rt", "signal", "macros", "rt-multi-thread", "fs", "process", "io-util"] }
tokio-util = "0.7.10"
alloy = { version = "0.2.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
[lints]
workspace = true
