[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
nitro-enclaves = ["aws-nitro-enclaves-nsm-api", "aws-nitro-enclaves-attestation"]

[dependencies]
derive_more = "0.99.17"
derive-where = "1.2.7"
bincode = "1.3.3"
serde = { version = "1.0.195", features = ["derive"] }
schnorrkel = { version = "0.11.4", features = ["serde"] }
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde", "recovery"] }
nix = { version = "0.28.0", features = ["socket", "sched", "resource"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
sha3 = "0.10.1"
hex = "0.4.3"
blake2 = "0.10.6"
rand = "0.8.5"
rand_distr = "0.4.3"
tracing = "0.1.40"
num_cpus = "1.13.1"
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["net", "time", "sync", "rt", "signal", "macros", "rt-multi-thread", "fs", "process", "io-util"] }
tokio-util = "0.7.10"
futures = "0.3.30"
tools ={ path = "../tools"}
primitive-types = { version = "0.12.2", features = ["serde"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true }
aws-nitro-enclaves-attestation = { git = "https://github.com/neatsys/aws-nitro-enclaves-attestation", version = "0.1.0", optional = true }

[lints]
workspace = true
