[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
tokio = { version = "1.27", features = [ "full" ] }
futures = "0.3"
sha2 = "0.10.8"
sysinfo = "0.30.12"
tracing = "0.1.40"
parking_lot = "0.12.2"