[package]
name = "vrf"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
bincode = "1.1.1"
bytes = "1.6.1"
curve25519-dalek = "4.1.3"
derive_deref = "1.0.2"
anyhow = { version = "1.0.79", features = ["backtrace"] }
failure = "0.1.3"
ed25519-dalek = { version = "2.1.1", features = ["serde", "digest", "rand_core", "pem", "pkcs8"] }
hex = "0.4.3"
lazy_static = "1.3.0"
proptest = "1.5.0"
proptest-derive = "0.5.0"
rand = { version = "0.8.5" }
rand_core = "0.6.4"
serde = { version = "1.0.89", features = ["derive"] }

[lints]
workspace = true
